--- a/css/index.css
+++ b/css/index.css
@@ -14,12 +14,13 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-border: 0;  
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
 }
 /*GENERAL STYLES*/
+
+
 html{
     font-size:62.5%;
 }
@@ -133,4 +134,76 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+
+/* Mobile Responsive Design  */
+
+@media (max-width: 500px) {
+
+    .title-container div {	
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
+        background-position: center;	
+        color: white;	
+        width:100%;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height:60vh;
+        
+    }
+
+    nav{
+        width:55%;
+        display:flex;
+        justify-content:space-evenly;
+        margin-top:5%;
+    }
+
+    .artists-container{
+        display:flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width:91%;
+        margin: 2% auto;
+        align-items: center;
+    }
+
+    .artist{
+        width:91%;
+        text-align:center;
+    }
+
+    .artist img{
+        width: 50%;
+        height: 50%;
+    }
+
+    a {	
+        text-decoration: none;	
+        color: black;
+        font-size:2rem;	
+        font-weight: 100;
+    }
+
+    .bio {
+        line-height: 1;
+        font-size: 1.2rem;
+    }
+
+    hr {
+        border: 1px solid gray;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+
+        
+
+    
+
+
+    
+
 }
